add create message endpoint
