# Api/messages_controller.go
@@ -3,7 +3,7 @@ package Api
 import (
 	"github.com/gin-gonic/gin"
 	"net/http"
-	dto "quay-go-api/Entities/Dto"
+	"quay-go-api/Entities/Dto"
 	"quay-go-api/Services"
 	"quay-go-api/Services/Auth"
 )
@@ -13,20 +13,17 @@ func messagesController() {
 	{
 		messages.Use(authorizedMiddleware)
 		messages.GET("/", listMessages)
-		/*messages.POST("/", createMessage)
-		messages.PATCH("/:id", updateMessage)
-		messages.DELETE("/:id", deleteMessage)*/
+		messages.POST("/", createMessage)
+		/*messages.PATCH("/:uuid", updateMessage)
+		messages.DELETE("/:uuid", deleteMessage)*/
 	}
-
-	// Just to avoid cleanup dependency
-	_ = dto.Message{}
 }
 
-// listMessages List messages displayed in the quay web app for all user
-// @Description List messages displayed in the quay web app for all user
-// @Summary List messages displayed in the quay web app for all user
+// listMessages List messages displayed on the quay web app for all user
+// @Description List messages displayed on the quay web app for all user
+// @Summary List messages displayed on the quay web app for all user
 // @Tags Messages
-// @Success 200 {object} []dto.Message
+// @Success 200 {object} []Dto.Message
 // @Failure 401 {object} Errors.ErrorResponse "Unauthorized"
 // @Failure 500 {object} Errors.ErrorResponse "Internal Server Error"
 // @Security ApiKeyAuth
@@ -45,4 +42,33 @@ func listMessages(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, messages)
+}
+
+// createMessage Create a new message to displayed on the quay web app for all user
+// @Description Create a new message to displayed on the quay web app for all user
+// @Summary Create a new message to displayed on the quay web app for all user
+// @Tags Messages
+// @Accept json
+// @Param message body Dto.CreateMessage true "Message content and severity"
+// @Success 201 {object} Dto.Message
+// @Failure 401 {object} Errors.ErrorResponse "Unauthorized"
+// @Failure 500 {object} Errors.ErrorResponse "Internal Server Error"
+// @Security ApiKeyAuth
+// @Router /api/v1/messages [post]
+func createMessage(c *gin.Context) {
+	hasScopesErr := requiredScopes(c, []Auth.Scope{Auth.AdminUser})
+	if hasScopesErr != nil {
+		throwError(c, hasScopesErr)
+		return
+	}
+
+	var createMessage Dto.CreateMessage
+	_ = c.BindJSON(&createMessage)
+
+	createdMessage, err := Services.CreateMessage(createMessage)
+	if err != nil {
+		throwError(c, err)
+		return
+	}
+	c.JSON(http.StatusCreated, createdMessage)
 }
